--- a/marks/static/marks/css/marks_table.css
+++ b/marks/static/marks/css/marks_table.css
@@ -15,4 +15,63 @@ table thead {
   row-gap: 50px;
 }
 
+.fullname {
+  cursor: pointer;
+}
+.fullname:hover {
+  color: var(--primary-color);
+}
+
+#vals-list {
+  column-gap: 15px;
+  row-gap: 15px;
+  margin-inline: auto;
+}
+#vals-list input {
+  position: absolute;
+  left: -100vw;
+}
+#vals-list input:checked + label {
+  color: var(--bg-light-color);
+  z-index: 2;
+}
+#vals-list input:checked + label::before {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-color: var(--module-bg-color);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 1;
+}
+#vals-list input:focus {
+  outline: none;
+}
+#vals-list label {
+  position: relative;
+  border-radius: 50%;
+  color: var(--text-ultralight-color);
+  font-size: var(--s-font-size);
+  min-width: 30px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+#vals-list label::before {
+  content: "";
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+#student-fio-hint {
+  color: var(--text-ultralight-color);
+  text-align: center;
+  width: 100%;
+  display: block;
+  font-size: var(--xs-font-size);
+}
+
 /*# sourceMappingURL=marks_table.css.map */
