--- a/marks/static/marks/css/marks_table.scss
+++ b/marks/static/marks/css/marks_table.scss
@@ -19,3 +19,69 @@ table {
 #top {
     row-gap: 50px;
 }
+
+.fullname {
+    cursor: pointer;
+
+    &:hover {
+        color: var(--primary-color);
+    }
+}
+
+#vals-list {
+    column-gap: 15px;
+    row-gap: 15px;
+    margin-inline: auto;
+
+    input {
+        position: absolute;
+        left: -100vw;
+
+        &:checked+label {
+            color: var(--bg-light-color);
+            z-index: 2;
+
+            &::before {
+                width: 40px;
+                height: 40px;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                background-color: var(--module-bg-color);
+                border-radius: 50%;
+                transform: translate(-50%, -50%);
+                z-index: -1;
+                opacity: 1;
+            }
+        }
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    label {
+        position: relative;
+        border-radius: 50%;
+        color: var(--text-ultralight-color);
+        font-size: var(--s-font-size);
+        min-width: 30px;
+        text-align: center;
+        cursor: pointer;
+        user-select: none;
+
+        &::before {
+            content: "";
+            opacity: 0;
+            transition: .3s ease;
+        }
+    }
+}
+
+#student-fio-hint {
+    color: var(--text-ultralight-color);
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-size: var(--xs-font-size);
+}
