--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -49,7 +49,9 @@ ul {
     display: flex;
 }
 
-input {
+input,
+textarea,
+select {
     border: none;
     outline: none;
     background-color: var(--bg-color);
@@ -61,6 +63,30 @@ input {
     &:focus {
         outline: 2px var(--primary-light-color) solid;
     }
+
+    &::-ms-input-placeholder {
+        color: var(--text-ultralight-color);
+    }
+
+    &::-webkit-input-placeholder {
+        color: var(--text-ultralight-color);
+    }
+
+    &::-moz-placeholder {
+        color: var(--text-ultralight-color);
+    }
+
+    &::placeholder {
+        color: var(--text-ultralight-color);
+    }
+}
+
+textarea {
+    resize: none;
+}
+
+label {
+    display: block;
 }
 
 section {
@@ -204,9 +230,38 @@ td {
 .table-container {
     max-width: 100%;
     overflow-x: auto;
-    max-height: 50vh;
-    padding: 10px;
+    max-height: 60vh;
+    padding: 0 10px 10px 0;
     position: relative;
+}
+
+.modal-window {
+    background-color: rgba(0, 0, 0, .6);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    z-index: -1;
+
+    &>:is(form, div) {
+        row-gap: 50px;
+        width: 500px;
+
+        h2 {
+            text-align: center;
+        }
+    }
+
+    div.flex {
+        row-gap: 25px;
+    }
 }
 
 #top header {
