🚧: show mark modal

--- a/marks/static/marks/css/marks_table.css
+++ b/marks/static/marks/css/marks_table.css
@@ -9,6 +9,13 @@ table td:nth-child(3) {
 }
 table thead {
   position: sticky;
+  z-index: 2;
+}
+table.student-table td:nth-child(3) {
+  border-right: none;
+}
+table.student-table td:nth-child(2) {
+  border-right: 1px solid var(--primary-light-color);
 }
 
 #top {
@@ -66,12 +73,33 @@ table thead {
   transition: 0.3s ease;
 }
 
-#student-fio-hint {
+.hint {
   color: var(--text-ultralight-color);
   text-align: center;
   width: 100%;
   display: block;
   font-size: var(--xs-font-size);
+}
+
+#add-mark-modal textarea {
+  height: 100px;
+}
+
+#show-mark-modal .mark {
+  font-size: var(--m-font-size);
+}
+#show-mark-modal .card {
+  row-gap: 25px;
+}
+#show-mark-modal .feedback {
+  margin: 0;
+  border-left: 2px var(--primary-shade-color) solid;
+  padding-left: 10px;
+  font-size: var(--s-font-size);
+  word-break: break-word;
+}
+#show-mark-modal .date {
+  color: var(--text-ultralight-color);
 }
 
 /*# sourceMappingURL=marks_table.css.map */
