--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -218,6 +218,10 @@ table {
     font-family: 'Margarine';
     color: var(--secondary-color);
 
+    &.pointer {
+        cursor: pointer;
+    }
+
     &.show-more {
         cursor: pointer;
         position: relative;
