--- a/marks/static/marks/css/marks_table.css
+++ b/marks/static/marks/css/marks_table.css
@@ -106,4 +106,8 @@ table.student-table td:nth-child(2) {
   color: var(--text-ultralight-color);
 }
 
+#show-mark-modal form {
+  padding: 0;
+}
+
 /*# sourceMappingURL=marks_table.css.map */
