--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -157,6 +157,15 @@ section {
     }
 }
 
+.tiny-button {
+    cursor: pointer;
+    color: var(--primary-color);
+
+    &:hover {
+        color: var(--primary-shade-color);
+    }
+}
+
 .flex {
     display: flex;
     flex-direction: column;
