--- a/marks/templates/marks/templatetags/marks_table.html
+++ b/marks/templates/marks/templatetags/marks_table.html
@@ -20,7 +20,12 @@
             {% for student, marks in marks_map.items %}
                 <tr>
                     <td>{{forloop.counter}}</td>
-                    {% if not is_student|default:False %}<td class="fullname" onclick="openMarkAddModal({{student.id}}, '{{student.get_fio}}')">{{student.get_fio}}</td>{% endif %}
+                    {% if not is_student|default:False %}<td class="fullname" onclick="openMarkAddModal({{student.id}}, '{{student.get_fio}}')">
+                        <div>
+                            <img src="{% if student.photo %}{{student.photo}}{% else %}{% static "users/imgs/default_user.png" %}{% endif %}" alt="Фото профиля">
+                            <span>{{student.get_fio}}</span>
+                        </div>
+                    </td>{% endif %}
                     <td>{% average_mark subject student %}</td>
                     {% for date in dates %}
                         <td>
