--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -297,16 +297,20 @@ td {
 
 #top header {
     display: flex;
-    justify-content: space-between;
+    position: relative;
 
     #logo {
         width: 168px;
     }
 
     .profile.card {
-        height: fit-content;
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 50px;
         padding: 10px 20px;
         row-gap: 10px;
         cursor: pointer;
+        overflow: hidden;
     }
 }
