💄: footer is done

--- a/marks/static/marks/css/style.css
+++ b/marks/static/marks/css/style.css
@@ -47,12 +47,16 @@
 
 body {
   min-height: 100vh;
-  padding: 40px 60px 0;
+  padding: 40px 0 0;
   background-color: var(--bg-color);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  row-gap: 150px;
+}
+body #top {
+  padding-inline: 60px;
 }
 
 img,
@@ -334,6 +338,25 @@ td .mark_form {
   row-gap: 10px;
   cursor: pointer;
   overflow: hidden;
+}
+
+footer {
+  background-color: var(--bg-light-color);
+  padding: 30px 60px;
+  display: flex;
+  justify-content: space-between;
+}
+footer #info {
+  font-weight: 700;
+  display: flex;
+  column-gap: 5px;
+  margin-top: 12px;
+}
+footer #github {
+  filter: brightness(0);
+}
+footer #github:hover {
+  filter: none;
 }
 
 /*# sourceMappingURL=style.css.map */
