--- a/marks/static/marks/css/style.scss
+++ b/marks/static/marks/css/style.scss
@@ -320,6 +320,12 @@ td {
     }
 }
 
+.profile-picture {
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+}
+
 footer {
     background-color: var(--bg-light-color);
     padding: 30px 60px;
